test/bad/loops/else03.px

for c in 0..1 do
    break
else do
    print c
